@@ -1,5 +1,7 @@
 package edu.colorado.phet.common.motion.charts;
 
+import edu.umd.cs.piccolo.PNode;
+
 import java.util.ArrayList;
 import java.util.Collections;
 
@@ -44,33 +46,43 @@ public interface ControlChartLayout {
         }
 
         public void updateLayout(MinimizableControlChart[] charts, double width, double height) {
-            double maxControlPanelWidth = getMax(charts, new DoubleGetter() {
+            double controlPanelWidth = getMax(charts, new DoubleGetter() {
                 public Double getValue(MinimizableControlChart chart) {
                     return chart.getControlPanel().getFullBounds().getWidth();
                 }
             });
-            double maxSliderWidth = getMax(charts, new DoubleGetter() {
+            double sliderWidth = getMax(charts, new DoubleGetter() {
                 public Double getValue(MinimizableControlChart chart) {
                     return chart.getSliderNode().getFullBounds().getWidth();
                 }
             });
-            double maxZoomControlWidth = getMax(charts, new DoubleGetter() {
+            double sliderInternalInsetX = getMax(charts,new DoubleGetter() {
+                public Double getValue(MinimizableControlChart chart) {
+                    final PNode slider = chart.getSliderNode();
+                    if (slider.getFullBounds().getWidth()==0){
+                        return 0.0;
+                    }
+                    else{
+                        return slider.getXOffset() - slider.getFullBounds().getX();
+                    }
+                }
+            });
+            double zoomControlWidth = getMax(charts, new DoubleGetter() {
                 public Double getValue(MinimizableControlChart chart) {
                     return chart.getZoomButtonNode().getFullBounds().getWidth();
                 }
             });
-            double extraLayoutHeightForDomainAxisLabels = getMax(charts, new DoubleGetter() {
+            double domainAxisLabelHeight = getMax(charts, new DoubleGetter() {
                 public Double getValue(MinimizableControlChart chart) {
                     return chart.getDomainLabelHeight();
                 }
             });
-            double maxRangeAxisLabelWidth = getMax( charts, new DoubleGetter() {//TODO: need to observe when this changes and update layout
+            
+            double rangeAxisLabelWidth = getMax( charts, new DoubleGetter() {//TODO: need to observe when this changes and update layout
                 public Double getValue( MinimizableControlChart chart ) {
                     return chart.getMaxRangeAxisLabelWidth();
                 }
             } );
-//            double chartRangeLabelWidth = 20;//TODO: don't hard code this.
-            double chartWidth = width - maxControlPanelWidth - maxSliderWidth - maxZoomControlWidth - maxSliderWidth / 2.0 - maxRangeAxisLabelWidth;
 
             //Figure out how many charts are visible and how much space the minimized charts will use.
             int numVisibleCharts = 0;
@@ -82,18 +94,22 @@ public interface ControlChartLayout {
                     minimizedChartSpace += chart.getMinimizedHeight();
                 }
             }
+            System.out.println("sliderInternalInsetX = " + sliderInternalInsetX);
 
+            double chartWidth = width - controlPanelWidth - sliderWidth - rangeAxisLabelWidth - zoomControlWidth;
+            
             //Determine the X coordinates of the different components
             final double controlPanelX = 0.0;
-            final double sliderX = maxControlPanelWidth + controlPanelX + maxSliderWidth / 2.0;
-            final double chartX = sliderX + maxSliderWidth + maxRangeAxisLabelWidth-10;//This value accounts for the fact that the range axis labels are not exactly right justified against the chart//TODO: don't hard code this
-            final double zoomControlX = chartX + chartWidth;
+            final double sliderX = controlPanelX + controlPanelWidth+sliderInternalInsetX;
+            final double zoomControlX = width-zoomControlWidth;
+            final double chartX = zoomControlX - chartWidth;//This value accounts for the fact that the range axis labels are not exactly right justified against the chart//TODO: don't hard code this
+            
 
             //Compute the vertical location and spacing
             final int paddingBetweenCharts = 8;
             final int totalPaddingBetweenCharts = paddingBetweenCharts * (charts.length - 1);
             final double maximizedChartHeight = numVisibleCharts == 0 ? 0 : 
-                    (height  - minimizedChartSpace - totalPaddingBetweenCharts) / numVisibleCharts - extraLayoutHeightForDomainAxisLabels;//TODO: account for insets
+                    (height  - minimizedChartSpace - totalPaddingBetweenCharts) / numVisibleCharts - domainAxisLabelHeight;//TODO: account for insets
             double chartY = 0.0;
             
             //Update the chart sizes and locations
